layout issue

--- a/aircox_cms/static/aircox_cms/css/layout.css
+++ b/aircox_cms/static/aircox_cms/css/layout.css
@@ -196,7 +196,7 @@ body > .header {
 
 .page > nav {
     flex: 1;
-    width: 20em;
+    width: 50em;
     overflow: hidden;
     max-width: 16em;
 }
